# irelia

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
adapter/: Cargo.toml
adapter/src/: annotated_proof.rs  annotation_parser.rs  builtin_info.rs  errors.rs  fri_merkle_statement.rs  lib.rs  merkle_statement.rs  oods_statement.rs  proof.rs
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs
crates/adapter/src/aptos_writer/: config.rs  flow_test.rs  mod.rs
crates/adapter/src/aptos_writer/contracts_caller/: transaction_helper.rs  types.rs  vm_status.rs
crates/adapter/src/aptos_writer/contracts_caller/gps/: extract_gps_input.rs  mod.rs  verify_proof_and_register.rs
crates/adapter/src/aptos_writer/contracts_caller/gps/types/: verify_proof_and_register.rs
crates/adapter/src/aptos_writer/contracts_caller/memory_page_fact_registry/: extract_register_memory.rs  mod.rs  register_continuous_memory_page.rs  register_continuous_page_batch.rs  sample_register_memory.rs
crates/adapter/src/aptos_writer/contracts_caller/memory_page_fact_registry/types/: register_continuous_page_batch.rs
crates/adapter/src/aptos_writer/contracts_caller/verify_fri/: compute_next_layer.rs  extract_verify_fri_input.rs  fri_statement.rs  init_fri_group.rs  merkle_verifier.rs  mod.rs  register_fact_fri.rs  sample_verify_fri_input.rs  verify_fri.rs
crates/adapter/src/aptos_writer/contracts_caller/verify_fri/types/: compute_next_layer.rs  init_fri_group.rs  (+2 more)
crates/adapter/src/aptos_writer/contracts_caller/verify_merkle/: extract_verify_merkle_input.rs  merkle_statement.rs  mod.rs  register_fact_merkle.rs  sample_verify_merkle_input.rs  verify_merkle.rs
crates/adapter/src/prover/: annotation_parser.rs  builtin_info.rs  mod.rs  oods_statement.rs  sharp_prover.rs  stone_prover.rs
crates/adapter/src/prover/configs/: bootloader_cpu_air_params_layout_starknet_with_keccak.json  cpu_air_prover_config.json  env.json
crates/adapter/src/prover/test_samples/: bootloader_serialized_proof.json  fact_topologies.json
crates/adapter/src/repositories/: mod.rs  repository_test.rs
crates/adapter/src/repositories/in_memory/: cache.rs  question.rs
crates/adapter/src/repositories/postgres/: job_db.rs  mod.rs  question_db.rs  schema.rs  status_db.rs  worker_job_db.rs
crates/adapter/src/repositories/postgres/models/: job.rs  mod.rs  question.rs  status.rs  worker_job.rs
crates/adapter/src/repositories/redis/: cache.rs
crates/adapter/src/worker/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: cli_args.rs  lib.rs
crates/common/src/loggers/: telemetry.rs
crates/common/src/workers/: mod.rs
crates/core/: Cargo.toml
crates/core/src/common/: aptos_writer_error.rs  mod.rs  prover_error.rs
crates/core/src/entities/: annotated_proof.rs  fri_statement.rs  gps_statement.rs  job.rs  memory_statement.rs  merkle_statement.rs  mod.rs  payload_verify_job.rs  proof.rs  sharp_proof.rs  status.rs  worker_job.rs
crates/core/src/ports/: cache.rs  job.rs  mod.rs  prover.rs  question.rs  status.rs  worker.rs  worker_job.rs
crates/public/: Cargo.toml
crates/public/config/: 00-default.toml
crates/public/src/: app_state.rs  errors.rs  json_response.rs  lib.rs  main.rs  options.rs  router.rs  utils.rs
crates/public/src/controllers/: app_state.rs  job.rs  job_status.rs  mod.rs  worker_job.rs
crates/public/src/controllers/job/: add_job.rs  get_status.rs  mod.rs
crates/public/src/services/: check.rs  job.rs  mod.rs  worker_job.rs
crates/public/src/tests/: mod.rs  test_add_job.rs  test_get_status.rs
crates/public/src/utils/: job_response.rs  mod.rs  worker_job_response.rs
crates/temp/adapter/: Cargo.toml
crates/temp/adapter/src/: annotation_parser.rs  builtin_info.rs  fri_merkle_statement.rs
crates/temp/verifier/: Cargo.toml
crates/temp/verifier/src/: errors.rs  lib.rs
crates/worker/: Cargo.toml  build.rs
crates/worker/config/: 00-default.toml
crates/worker/src/: app_state.rs  errors.rs  job_worker.rs  lib.rs  main.rs  options.rs  router.rs  state.rs
crates/worker/src/jobs/: job_worker.rs  merkle_statement_job.rs  mod.rs  register_continuous_page_job.rs  verify_fri_job.rs  verify_proof_and_register_job.rs
deployer/: Cargo.toml
deployer/src/: lib.rs
deployer/src/contracts_caller/: transaction_helper.rs  vm_status.rs
deployer/src/contracts_caller/gps/: extract_gps_input.rs  mod.rs
deployer/src/contracts_caller/gps/types/: verify_proof_and_register.rs
deployer/src/contracts_caller/memory_page_fact_registry/: extract_register_memory.rs  register_continuous_page_batch.rs  sample_register_memory.rs
deployer/src/contracts_caller/verify_fri/: extract_verify_fri_input.rs  merkle_verifier.rs  sample_verify_fri_input.rs
deployer/src/contracts_caller/verify_fri/types/: init_fri_group.rs  mod.rs  register_fact_verify_fri.rs
deployer/src/contracts_caller/verify_merkle/: extract_verify_merkle_input.rs  register_fact_merkle.rs  sample_verify_merkle_input.rs
deployer/src/data_samples/data_samples/: README.md
deployer/src/data_samples/data_samples/fri_verify/: fri_verify_1.json  fri_verify_4.json  fri_verify_7.json  fri_verify_8.json
deployer/src/data_samples/data_samples/gps/: verify_proof_and_register_1.json
deployer/src/data_samples/data_samples/merkle_verify/: merkle_verify_1.json  merkle_verify_3.json
deployer/src/data_samples/data_samples_friendly_layers/fri_verify/: fri_verify_5.json
deployer/src/data_samples/data_samples_friendly_layers/memory_page_fact_registry/: register_continuous_page_batch.json
deployer/src/data_samples/data_samples_friendly_layers/merkle_verify/: merkle_verify_1.json  merkle_verify_3.json
deployer/src/data_samples/gps/: verify_proof_and_register_1.json
deployer/tests/: flow_test.rs
e2e-tests/: Cargo.toml  tests.rs
e2e-tests/assets/test_data/: encoded_cairo_pie.txt
e2e-tests/src/: lib.rs  postgres.rs  program.rs  utils.rs
prover/: Cargo.toml
prover/configs/: cpu_air_params.json  env.json
prover/src/: errors.rs  lib.rs
verifier/: Cargo.toml
verifier/src/: errors.rs  lib.rs
(+119 files in other folders)
