[package]
build = "build.rs"
edition = "2021"
name = "irelia"
version = "0.0.1"

[dependencies]
irelia_adapter = { workspace = true }
irelia_common = { workspace = true }
irelia_core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
deadpool-diesel = { workspace = true, features = ["postgres", "serde"] }
diesel = { workspace = true, features = [
  "postgres",
  "postgres_backend",
  "uuid",
] }
diesel_migrations = { workspace = true }
openssl = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
readonly = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "redis"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
graphile_worker = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }
base64 = { workspace = true }
serde_with = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }