[package]
build = "build.rs"
edition = "2021"
name = "irelia"
version = "0.0.1"

[dependencies]
irelia_adapter = { workspace = true }
irelia_common = { workspace = true }
irelia_core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
deadpool-diesel = { workspace = true, features = ["postgres", "serde"] }
diesel = { workspace = true, features = [
  "postgres",
  "postgres_backend",
  "uuid",
] }
diesel_migrations = { workspace = true }
graphile_worker = { workspace = true }
openssl = { workspace = true }
opentelemetry = { workspace = true }
readonly = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
stone-cli = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
zip = { workspace = true }
