[package]
autobenches = true
autobins = true
autoexamples = true
autotests = true
build = "build.rs"
edition = "2021"
name = "irelia-worker"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true }
graphile_worker = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
readonly = { workspace = true }
rust_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "chrono",
  "postgres",
  "json",
  "macros",
  "runtime-tokio",
], default-features = false }
testcontainers-modules = { workspace = true, features = ["postgres", "redis"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
