[package]
edition = "2021"
name = "temp_adapter"
version = "0.1.0"

[dependencies]
ethers = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
